ym-primary/css/custom.css
header nav {
	display:none;
}
header .ym-header-post-text {
	display:none;
}
.ym-header-logo--jump,
.ym-header-logo--hoops,
.ym-header-logo--shape-america {
	display:none;
}
.ym-page-content h1, #formTitle {
  color: #BDDD98;
  text-shadow: 3px 3px 2px #000;
}
em {
	font-size:12px;
}
img {
	max-width:100%;
	width:auto;
	height:auto;
}
div.responsive input[type="text"], div.responsive input[type="number"], div.responsive input[type="password"], div.responsive textarea, select, div.responsive select, select[size] {
  border: 1px solid #acacac !important;
  border-radius: 0 !important;
  width: 100% !important;
	height:auto;
}
#donation-errors {
	color:#ff0000;
}

/* Venmo edits */
div.responsive input.venmo-text {
  width: 100%;
  height: auto;
}
.container.heart-page-container.heart-page-container--personal {
	padding: 0px;	
}
div.donation-form-container .section-header-container {
  margin: 0;
  padding: 30px 0 0;
}
/* processing div */
.processing {
	display: none;
	padding: 20px 20px 40px;
	font-size: 18px;
	background: #fff;
}

#login-form {
	display:none;
}
#other-amount-input-group {
	margin-top: 0.5em;
}

#headerWrapper {
	background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
	border-bottom: medium none;
}
.navbar-default {
	background-color: #ffffff;
	border-color: #e7e7e7;
}
.page-header {
	margin-top: 0px;
	border:none;
}
.page-header h1 {
	color: #ed1c24;
	font-size:40px;
}
.panel {
	border:none;
	background:none;
	box-shadow:none;
}
.panel-heading:before {
	content:"\25B6";
	color:#ED1C24;
	padding-right:10px;
}
.panel-default > .panel-heading {
	font-size:24px;
	color:#656565;
	background:none;
	border: none;
}
.process-button {
	margin-top: -20px;
}
.donate-image {
	float:right;
	width:35%;
	margin-left:20px;
}
.donation-form {
	overflow:hidden;
}
.leftRegion, .width960 {
	width:auto;
}
.rightRegion {
	display:none;
}
.col-sm-2 {
	min-width: 110px;
}
.donate-how .col-sm-3 {
	width: 28%;
}
div.icon:hover, div.icon.active {
	background: #ED1C24;
	cursor:pointer;
}
.icon-selection {
	color:#353535;
	font-size:14px;
	text-transform:uppercase;
}
.donate-how input, .donate-select input[type=radio], .tribute-select input {
	display:none;
}
div.icon {
	background: #000000;
	padding:20px;
	display:inline-block;
	border-radius:50px;
	min-height:100px;
}

.donation-detail {
margin-top: 20px;
}

div.card-select label {
  background: none repeat scroll 0 0 #515151;
  border-radius: 8px;
  color: #fff;
  font-size: 24px !important;
  font-weight: normal;
  width: 125px;
  float: left;
  position: relative;
  margin: 10px 2% 10px 0;
}
.card-select label:hover, .card-select label.active {
	background: #ED1C24;
	cursor:pointer;
}

.form-group.gift-select {
  background: #ebe9f3 none repeat scroll 0 0;
  max-width: 650px;
  padding: 20px 0;
}
div.gift-select label {
  background: #fff none repeat scroll 0 0;
  border: 1px solid #cd1d67;
  color: #cd1d67;
  font-weight: 700;
  text-align: center;
  text-decoration: none;
  font-size: 20px !important;
  font-weight: bold;
  min-width: 110px;
  position: relative;
  margin: 10px 2% 10px 0;
  border-radius:10px;
  padding:10px;
  cursor:pointer;
}
div.gift-select input {
	display:none;
}
.gift-select label:hover, .gift-select label.active {
	background: #cd1d67;
	cursor:pointer;
	color:#fff;
}
.form-group.donate-select {
  background: #ebe9f3 none repeat scroll 0 0;
  max-width: 650px;
  padding: 20px 0;
}
div.donate-select labelx {
  background: none repeat scroll 0 0 #515151;
  border-radius: 8px;
  color: #fff;
  font-size: 24px !important;
  font-weight: normal;
  height: 60px;
  width: 125px;
  float: left;
  position: relative;
  margin: 10px 2% 10px 0;
  text-align:center;
}
div.donate-select label {
  background: #fff none repeat scroll 0 0;
  border: 1px solid #cd1d67;
  color: #cd1d67;
  font-weight: 700;
  text-align: center;
  text-decoration: none;
  font-size: 20px !important;
  font-weight: bold;
  min-width: 110px;
  float: left;
  position: relative;
  margin: 10px 2% 10px 0;
  border-radius:10px;
}
.donation-level-amount-container, .level_other {
  padding: 10px; 	
}

.donate-select label:hover, .donate-select label.active {
	background: #cd1d67;
	cursor:pointer;
	color:#fff;
}
.level-other-input {
  display: none;
  margin-top: 10px;
}
.level-other-input .input-group-addon {
  display: inline-block;
  height: 44px;
  margin-right: -6px;
  padding: 14px 12px;
  position: relative;
  top: 1px;
  width: 31px;
  z-index: 13;
}
.level-other-input .form-control {
	display:inline-block;
	width:70%;
}
input#other-amount-entered {
  color: #000;
  font-size: 20px;
  height: auto;
  line-height: 24px;
  padding: 9px;
  position: relative;
  top: 3px;
  width:100px !important;
}

.recurring {
	display:none;
}

input.error,
select.error {
  border-color: #ff0000 !important;
  box-shadow: none !important;
  -webkit-box-shadow: none !important;
}

input[type='number'] {
  -moz-appearance:textfield;
}

label.error {
	font-weight:normal;
	color:#ff0000;
	white-space:nowrap;
}
div.donate-select label.error {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  color: #ff0000;
  display: block;
  font-size: 14px;
  font-weight: normal;
  white-space: normal;
  width: 100%;
}
/*
.contact-information .form-group {
  background: none repeat scroll 0 0 #fff;
  border: 1px solid #ccc;
  border-radius: 10px;
  width: 90%;
  padding:3px 0;
}

.contact-information .form-control {
	border:none;
	background:none;
	box-shadow:none;
}
*/
.star {
  color:#C10E21;
}

.control-label {
	text-align: left !important;
	font-size:14px;
	text-transform:uppercase;
}
.form-group.required .control-label:after, .checkbox.required label:after {
  /* content:" *"; */
  color:#C10E21;
}
.checkbox.required label, .checkbox label {
	margin-left: 1em !important;
}

.btn-primary {
	/* background-color: #ed1c24 !important; */
	border: none;
	color: #fff;
	font-size:24px;
	font-weight:bold;
	/* border-radius:0px; */
	padding:20px;
	margin:0 auto;
	display:block;
}
.btn-primary:hover {
	background-color: #ed1c24;	
	text-decoration:underline;
}
.btn-primary > div {
	font-size:0.8em;
	font-weight:normal;
}

.btn-primary-venmo, .btn-primary-applepay, .btn-primary-googlepay {
  background-color: transparent !important;
  padding: 0;
}
.btn-primary-venmo:hover, .btn-primary-applepay:hover, .btn-primary-googlepay:hover {
  background-color: transparent !important;
  text-decoration: none;
}
.confirmation-amount {
  font-size: 1.5em;
  font-weight: bold;
  margin-top: 1em;
}

footer {
	background: #242424;
	color: #b4b4b4;
	font-size: 12px;
	text-align:center;
	padding:25px;
	margin-top:30px;
}

ul.footer-menu {
	list-style:none;
	margin:30px 0 10px;
	padding:0;
}

ul.footer-menu li {
	display:inline-block;
	margin-right: 10px;
}

ul.footer-menu li a {
	color:#ed1c24;
}

.livechat {
  position: absolute;
  right: 15px;
  top: 15%;
}

#otherGiving ul {
  list-style-type: none;
  text-align: center;
  margin-top: 30px;
}

#otherGiving li {
  display: inline;
  padding: 30px;
  text-decoration: underline;
}

.vertical {
  overflow: hidden;
}
.vertical li {
  float: left;
  width: 140px;
}
.vertical li .or {
  color: #aaa;
  float: left;
  font-size: 12px;
  margin-left: -8px;
  margin-top: 32px;
}
.vertical li:last-child {
  float: right;
  text-align: right;
}
.vertical li:last-child input {
  float: right;
}
.vertical input {
  width: 68px;
}

.thank-you .givingText {
  /* margin: 0 0 0 140px; */
  text-align:left !important;
}
.thank-you .givingText-venmo,
.thank-you .givingText-googlepay {
  max-width: 760px;
  margin: 0 auto 2em;
  text-align:left !important;
  /* margin: 0 auto 40px; */
}

.fa-flag,
.fa-usd {
  color: #fff;
  font-size: 60px;
  text-align: right;
  width: 100px;
}

.simple-social-icons ul.aligncenter {
    text-align: center;
}
.simple-social-icons ul {
    margin: 0;
    padding: 0;
}
.widget-area .simple-social-icons ul li a, 
.widget-area .simple-social-icons ul li a:hover {
    border: 1px solid #ccc !important;
}
.simple-social-icons ul.aligncenter li {
    display: inline-block;
    float: none;
}
.simple-social-icons ul li a, .simple-social-icons ul li a:hover {
  background-color: #ed1c24 !important;
  border-radius: 38px;
  color: #ffffff !important;
  font-size: 34px;
  padding: 20px;
}
.simple-social-icons ul li a {
    border: medium none !important;
    box-sizing: content-box;
    display: inline-block;
    font-style: normal !important;
    font-variant: normal !important;
    font-weight: normal !important;
    line-height: 1em;
    text-align: center;
    text-decoration: none !important;
    text-transform: none !important;
    width: 1em;
}
td.FormSectionHeader {
	font-weight:bold;
}
.thank-you table {
	max-width:500px;
	/* margin: 0 auto; */
}
.thank-you table td {
	text-align:left;
}

.thank-you .venmo {
  margin-left: .5em;
  margin-right: .5em;
}
.thank-you table.venmo-table {
  width:100%;
  margin: 0 auto;
}

.privacyText {
  font-size: 0.7em;
  font-weight: bold;
  padding-top: 5px;
  text-align: center;
  margin-left: 20px !important;
}
#tos-error {
  color:#d40000;
  font-size: 1.3em;
  font-weight: bold;
  clear:both;
}
#tos-error:before, #tos-error:after {
  content:none;
}


/* amazon pay */
#walletWidgetDiv {
	display: none;
	width: 400px; 
  height: 228px;
  max-width: 100%;
}
#consentWidgetDiv {
	display: none;
	width: 400px;
	height: 140px;
}
#AmazonLogoutButton {
	display: none;
}
#AmazonLogoutButton a {
  font-size: 12px;
}
#AmazonPayment #walletWidgetDiv, 
#AmazonPayment #consentWidgetDiv {
  margin-bottom: 10px;
}

.amazon-payments {
  font-size: 0.8em;	
}

/* @media (min-width: 992px) {
  .container {
      width:896px
  }
}

@media (min-width: 1200px) {
  .container {
      width:896px
  }
} */

@media only screen and (max-width: 767px) {
	.navbar-toggle {
		display:none;
	}
	.container > .navbar-header {
		margin-left:0px;
	}
	.date-form-group select {
		margin-bottom: 0.75em;
	}
	.btn-primary {
		font-size:18px;
	}
	.donate-how .col-xs-10 {
		width: 83.3333%;
	}
	.donate-select .text-left {
		text-align:center;
	}
	span.livechat-text {
	  display:none;
	}
	
  #otherGiving li {
    display: block;
    padding: 0px;
    text-decoration: underline;
  }	
}
 @media only screen and (max-width: 320px) {
	 
 }

 /* override default styling for nav */
/* .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
  margin-left: 0;
}
.navbar-brand {
  float: left;
  font-size: 18px;
  height: auto;
  line-height: inherit;
  padding: 15px;
} */

